--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.6"
 
 services:
   skeleton_db:
+    platform: linux/x86_64
     image: mysql:5.7
     volumes:
       - dbvol:/var/lib/mysql
