--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<kotlin.version>1.9.23</kotlin.version>
 		<liquibase.core.version>4.27.0</liquibase.core.version>
 		<mysql-connector.version>8.3.0</mysql-connector.version>
+		<jakarta-persistence.version>3.1.0</jakarta-persistence.version>
 	</properties>
 
 	<dependencies>
@@ -28,7 +29,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,6 +54,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>${jakarta-persistence.version}</version>
 		</dependency>
 
 		<dependency>
